code/tui/src/app/snapshots/app__marketplace_tests__lsp_chinese_configuration.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 语 言 服 务 器  · web-lsp ─────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │> 返 回 语 言 服 务 器                                                          │             
            │  停 用 服 务 器   ·  当 前 已 启 用                                               │             
            │  设 置 程 序 路 径   ·  /tools/web-lsp                                        │             
            │  使 用 提 供 方 程 序   ·  保 留 当 前 启 用 或 停 用 状 态                               │             
            │  恢 复 提 供 方 默 认 值   ·  删 除 此 显 式 配 置                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter 确 认   ·  Esc 关 闭                                                 │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型
