code/tui/src/app/snapshots/app__marketplace_tests__marketplace_catalog_offline.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Marketplace ──────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Plugins    MCP    Connectors    Executables    Languages    │             
            │   Themes    Localizations    Assets                                     │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  server error -32000: Catalog offline                                   │             
            │  Installed                                                              │             
            │> web                                                                  + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  / search · ←/→ details · u uninstall · r refresh                       │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
