code/tui/src/app/snapshots/app__marketplace_tests__marketplace_chinese_command_completion.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: "format!(\"{completion}\\n\\n{hint}\")"
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ─────────────────────────────────────────────────────────────────────────────────────────── 1/2   
  /marketplace               查 找 和 安 装 扩 展 市 场 中 的 包                                                
  /cd                        将 此 会 话 移 至 新 的 工 作 目 录                                                
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > /market                                                                                         
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  Enter 发 送                                                                                         

  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ⏸ 请 求 权 限                                                                                         
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > /marketplace <搜 索 词 >                                                                           
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  Enter 发 送   ·  shift+tab 模 式   ·  shift+↓/↑ 思 考
